--- a/source/form.html
+++ b/source/form.html
@@ -18,11 +18,12 @@
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
+            <img class="page-header__logo--image" src="img/logo-sedona-mobile.svg" alt="Седона">
           </picture>
         </a>
       </div>
-      <nav class="main-nav main-nav--closed main-nav--opened main-nav--nojs">
+      <nav class="main-nav main-nav--opened main-nav--nojs">
+        <!--main-nav- -closed, без пробела перед -closed, для закрытого меню -->
         <button aria-label="Открыть меню" class="main-nav__toggle" type="button">
           <span class="visually-hidden">
             <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982"
@@ -55,7 +56,11 @@
 
       <section class="intro">
         <div class="intro__wrapper-image">
-          <img class="intro__image" src="#" width="320" height="389" alt="Вид города Седона">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/bg-back-desktop@1x.jpg">
+            <source media="(min-width: 768px)" srcset="img/bg-back-tablet@1x.jpg">
+            <img class"intro__image" src="img/bg-back-mobile@1x.jpg" width="320" height="389" alt="Вид города Седона">
+          </picture>
           <picture>
             <img class="intro__slogan" src="text-sedona.svg" width="281" height="214" alt="Слоган города Седона">
           </picture>
@@ -180,7 +185,7 @@
                   <source media="(min-width: 768px)" srcset="img/icon-youtube.svg">
                   <img class="social__image" src="img/icon-youtube.svg" width="20" height="14" alt="Sedona в Youtube">
                 </picture>
-                <span class="visually-hidden">Мы в Youtube<span class="visually-hidden">
+                <span class="visually-hidden">Мы в Youtube</span>
               </a>
             </li>
           </ul>
