--- a/source/index.html
+++ b/source/index.html
@@ -13,13 +13,14 @@
 <body>
   <div class="container">
     <header class="page-header">
-      <nav class="main-nav main-nav--opened main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--opened main-nav--nojs">
+        <!--main-nav- -closed, без пробела перед -closed, для закрытого меню -->
         <div class="page-header__logo page-header__logo--wrapper">
           <a class="page-header__logo">
             <picture>
               <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
               <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-              <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
+              <img class="page-header__logo--image" src="img/logo-sedona-mobile.svg" alt="Седона">
             </picture>
           </a>
         </div>
@@ -158,7 +159,11 @@
     </main>
 
     <footer class="page-footer">
-      <img src="#" width="320" height="350" alt="Седона на карте">
+      <picture>
+        <source media="(min-width: 1200px)" srcset="img/img/bg-map-desktop@1x.jpg">
+        <source media="(min-width: 768px)" srcset="img/img/bg-map-tablet@1x.jpg">
+        <img class="page-footer__map" src="img/img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Седона на карте">
+      </picture>
       <div class="page-footer__wrapper">
         <b class="page-footer__tag tag">#visitsedona</b>
 
@@ -167,12 +172,15 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в В Твиттере</a>
+              <span class="visually-hidden">Мы в В Твиттере</span>
             </li>
             <li class="social__item">
               <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              <span class="visually-hidden">Мы в Фейсбуке</span>
             </li>
             <li class="social__item">
               <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Youtube</a>
+              <span class="visually-hidden">Мы в Youtube</span>
             </li>
           </ul>
         </section>
