--- a/source/index.html
+++ b/source/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Седона</title>
+  <title>Седона</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,15 +14,13 @@
     <header class="page-header">
       <nav class="main-nav main-nav--opened main-nav--nojs">
         <!--main-nav- -closed, без пробела перед -closed, для закрытого меню -->
-        <div class="page-header__logo page-header__logo--wrapper">
-          <a class="page-header__logo">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
-              <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-              <img class="page-header__logo--image" src="img/logo-sedona-mobile.svg" alt="Седона">
-            </picture>
-          </a>
-        </div>
+        <a class="page-header__logo-wrapper">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
+          </picture>
+        </a>
         <button aria-label="Открыть меню" class="main-nav__toggle" type="button">
           <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982"
             xml:space="preserve">
@@ -56,12 +53,8 @@
       <section class="promo">
         <div class="promo__wrapper">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/bg-back-desktop@1x.jpg">
-            <source media="(min-width: 768px)" srcset="img/bg-back-tablet@1x.jpg">
-            <img class"promo__image" src="img/bg-back-mobile@1x.jpg" width="320" height="389" alt="Вид города Седона">
-          </picture>
-          <picture>
-            <img class="promo__slogan" src="text-sedona-index.svg" width="281" height="214" alt="Слоган города Седона">
+
+            <img class="promo__slogan" src="img/text-sedona-index.svg" width="281" height="214" alt="Слоган города Седона">
           </picture>
         </div>
         <h1 class="visually-hidden">Седона — городок в Аризоне</h1>
@@ -88,7 +81,7 @@
             </div>
           </li>
           <li class="advantages__wrapper">
-            <ul class="advantages__list">
+            <ul class="advantages__list advantages__list--sub">
               <li class="advantages__item advantages__item--housing">
                 <section class="advantages__text-wrapper advantages__text-wrapper--housing">
                   <h3 class="advantages__title">Жилье</h3>
@@ -127,23 +120,23 @@
             </div>
           </li>
           <li>
-            <ul class="advantages__list">
+            <ul class="advantages__list advantages__list--sub advantages__list--grey">
               <li class="advantages__item advantages__item--grey">
-                <h3 class="advantages__title"> Небольшая площадь</h3>
-                <span class="advantages__number">— №3 —</span>
-                <p class="advantages__argument">Все интересные места находятся очень близко</p>
+                <h3 class="advantages__title advantages__title--sub"> Небольшая площадь</h3>
+                <span class="advantages__number advantages__number--sub">— №3 —</span>
+                <p class="advantages__argument advantages__argument--sub">Все интересные места находятся очень близко</p>
               </li>
 
               <li class="advantages__item advantages__item--grey">
-                <h3 class="advantages__title">Красивая дорога</h3>
-                <span class="advantages__number">— №4 —</span>
-                <p class="advantages__argument">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <h3 class="advantages__title advantages__title--sub">Красивая дорога</h3>
+                <span class="advantages__number advantages__number--sub">— №4 —</span>
+                <p class="advantages__argument advantages__argument--sub">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
 
               <li class="advantages__item advantages__item--grey">
-                <h3 class="advantages__title">Мало туристов</h3>
-                <span class="advantages__number">— №5 —</span>
-                <p class="advantages__argument">Большинство едет в Гранд каньон и толпится там</p>
+                <h3 class="advantages__title advantages__title--sub">Мало туристов</h3>
+                <span class="advantages__number advantages__number--sub">— №5 —</span>
+                <p class="advantages__argument advantages__argument--sub">Большинство едет в Гранд каньон и толпится там</p>
               </li>
             </ul>
           </li>
@@ -152,18 +145,23 @@
 
       <section class="search-hotel">
         <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
-        <b class="search-hotel__title">Заинтересовались?</b>
-        <p class="search-hotel__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <a class="search-hotel__show button" href="#">Найти гостиницу</a>
+        <div class="search-hotel__wrapper">
+          <b class="search-hotel__title">Заинтересовались?</b>
+          <p class="search-hotel__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        </div>
+        <a class="search-hotel__show button button--blue" href="#">Найти гостиницу</a>
       </section>
     </main>
 
     <footer class="page-footer">
-      <picture>
-        <source media="(min-width: 1200px)" srcset="img/img/bg-map-desktop@1x.jpg">
-        <source media="(min-width: 768px)" srcset="img/img/bg-map-tablet@1x.jpg">
-        <img class="page-footer__map" src="img/img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Седона на карте">
-      </picture>
+      <section class="map">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg">
+          <img class="map__image" src="img/bg-map-mobile@1x.jpg" alt="Седона на карте">
+        </picture>
+      </section>
+
       <div class="page-footer__wrapper">
         <b class="page-footer__tag tag">#visitsedona</b>
 
