--- a/source/form.html
+++ b/source/form.html
@@ -6,24 +6,21 @@
   <title> Форма отзыва | Седона</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div class="container">
     <header class="page-header">
-      <div class="page-header__logo page-header__logo--wrapper">
-        <a class="page-header__logo">
+      <nav class="main-nav main-nav--opened main-nav--nojs">
+        <!--main-nav- -closed, без пробела перед -closed, для закрытого меню -->
+        <a class="page-header__logo-wrapper">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-            <img class="page-header__logo--image" src="img/logo-sedona-mobile.svg" alt="Седона">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
           </picture>
         </a>
-      </div>
-      <nav class="main-nav main-nav--opened main-nav--nojs">
-        <!--main-nav- -closed, без пробела перед -closed, для закрытого меню -->
         <button aria-label="Открыть меню" class="main-nav__toggle" type="button">
           <span class="visually-hidden">
             <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982"
@@ -55,19 +52,14 @@
     <main class="page-main">
 
       <section class="intro">
-        <div class="intro__wrapper-image">
-          <picture>
-            <source media="(min-width: 1200px)" srcset="img/bg-back-desktop@1x.jpg">
-            <source media="(min-width: 768px)" srcset="img/bg-back-tablet@1x.jpg">
-            <img class"intro__image" src="img/bg-back-mobile@1x.jpg" width="320" height="389" alt="Вид города Седона">
-          </picture>
+        <div class="intro__image-wrapper">
           <picture>
             <img class="intro__slogan" src="text-sedona.svg" width="281" height="214" alt="Слоган города Седона">
           </picture>
         </div>
-        <div class="intro__wrapper-text">
-          <h1 class="intro__title">Оставьте свой отзыв</h1>
-          <p class="intro__text">
+        <div class="intro__text-wrapper intro__text-wrapper--form">
+          <h1 class="intro__title intro__title--form">Оставьте свой отзыв</h1>
+          <p class="intro__text intro__text--form">
             Помогите нашим отелям стать лучше! </br>
             Оставьте отзыв о них, а также о посещенных вами достопримечательностях
           </p>
@@ -77,29 +69,29 @@
       <section class="feedback">
         <h2 class="visually-hidden">Форма отзыва</h2>
         <form class="feedback__form" method="post" action="https://echo.htmlacademy.ru">
-          <fieldset class="feedback__fieldset">
-            <legend class="feedback__title">Представьтесь:</legend>
-            <p>
-              <label class="feedback__label" for="name">Имя*:</label>
-              <input class="feedback__input feedback__input--grey" id="name" type="text" name="name" value="" placeholder="Петр">
+          <fieldset class="feedback__fieldset feedback__fieldset--name-surname-patronymic">
+            <legend class="feedback__title feedback__title--name-surname-patronymic">Представьтесь:</legend>
+            <p class="feedback__wrapper">
+              <label class="feedback__label feedback__label--name" for="name">Имя*:</label>
+              <input class="feedback__input feedback__input--grey feedback__input--name" id="name" type="text" name="name" value="" placeholder="Петр">
             </p>
-            <p>
-              <label class="feedback__label" for="surname">Фамилия*:</label>
-              <input class="feedback__input feedback__input--grey" id="surname" type="text" name="surname" value="" placeholder="Иванов">
+            <p class="feedback__wrapper">
+              <label class="feedback__label feedback__label--surname" for="surname">Фамилия*:</label>
+              <input class="feedback__input feedback__input--grey feedback__input--surname" id="surname" type="text" name="surname" value="" placeholder="Иванов">
             </p>
-            <p>
-              <label class="feedback__label" for="patronymic">Отчество:</label>
-              <input class="feedback__input feedback__input--grey" id="patronymic" type="text" name="patronymic" value="" placeholder="Александрович">
+            <p class="feedback__wrapper">
+              <label class="feedback__label feedback__label--patronymic" for="patronymic">Отчество:</label>
+              <input class="feedback__input feedback__input--grey feedback__input--patronymic" id="patronymic" type="text" name="patronymic" value="" placeholder="Александрович">
             </p>
           </fieldset>
           <fieldset class="feedback__fieldset feedback__fieldset--contact-information">
             <legend class="feedback__title feedback__title--contact-information">Контактная информация:</legend>
-            <p>
-              <label class="feedback__label" for="tel">Контактный телефон*:</label>
+            <p class="feedback__wrapper feedback__wrapper--contacts">
+              <label class="feedback__label feedback__label--tel" for="tel">Контактный телефон*:</label>
               <input class="feedback__input feedback__input--grey" id="tel" type="tel" name="tel" value="" placeholder="Введите телефон">
             </p>
-            <p>
-              <label class="feedback__label" for="email">Электронная почта*:</label>
+            <p class="feedback__wrapper feedback__wrapper--contacts">
+              <label class="feedback__label feedback__label--email" for="email">Электронная почта*:</label>
               <input class="feedback__input feedback__input--grey" id="email" type="email" name="email" value="" placeholder="Введите e-mail">
           </fieldset>
 
@@ -107,15 +99,15 @@
             <legend class="feedback__title feedback__title--your-impressions">Ваше общее впечатление:</legend>
             <ul class="feedback__list">
               <li>
-                <label class="feedback__label label-relative" for="positive-impression">Скорее положительное</label>
+                <label class="feedback__label feedback__label--positive-impression" for="positive-impression">Скорее положительное</label>
                 <input class="feedback__input feedback__input--radio" id="positive-impression" type="radio" name="impression" value="positive" checked>
               </li>
               <li>
-                <label class="feedback__label label-relative" for="negative-impression">Скорее отрицательное</label>
+                <label class="feedback__label feedback__label--negative-impression" for="negative-impression">Скорее отрицательное</label>
                 <input class="feedback__input feedback__input--radio" id="negative-impression" type="radio" name="impression" value="negative">
               </li>
               <li>
-                <label class="feedback__label label-relative" for="dont-know-impression">Затрудняюсь ответить</label>
+                <label class="feedback__label feedback__label--dont-know-impression" for="dont-know-impression">Затрудняюсь ответить</label>
                 <input class="feedback__input feedback__input--radio" id="dont-know-impression" type="radio" name="impression" value="dont-know">
               </li>
             </ul>
@@ -124,20 +116,20 @@
             <legend class="feedback__title feedback__title--sightseengs-visited">Посещенные достопримечательности:</legend>
             <ul class="feedback__list">
               <li>
-                <input class="feedback__input" type="checkbox" name="devils-bridge" id="filter-devils-bridge" checked>
-                <label class="feedback__label feedback__input--checkbox" for="filter-devils-bridge">Мост Дьявола</label>
+                <input class="feedback__input feedback__input--checkbox" type="checkbox" name="feedback__label" id="filter-devils-bridge" checked>
+                <label class="feedback__label feedback__label--devils-bridge" for="filter-devils-bridge">Мост Дьявола</label>
               </li>
               <li>
-                <input class="feedback__input" type="checkbox" name="mountain-bell" id="filter-mountain-bell" checked>
-                <label class="feedback__label feedback__input--checkbox" for="filter-mountain-bell">Гора-Колокол</label>
+                <input class="feedback__input feedback__input--checkbox" type="checkbox" name="mountain-bell" id="filter-mountain-bell" checked>
+                <label class="feedback__label feedback__label--mountain-bell" for="filter-mountain-bell">Гора-Колокол</label>
               </li>
               <li>
-                <input class="feedback__input" type="checkbox" name="slide-park" id="filter-slide-park" checked>
-                <label class="feedback__label feedback__input--checkbox" for="filter-slide-park">Слайд-парк</label>
+                <input class="feedback__input feedback__input--checkbox" type="checkbox" name="slide-park" id="filter-slide-park" checked>
+                <label class="feedback__label feedback__label--slide-park" for="filter-slide-park">Слайд-парк</label>
               </li>
               <li>
-                <input class="feedback__input" type="checkbox" name="red-cliffs" id="filter-red-cliffs">
-                <label class="feedback__label feedback__input--checkbox" for="filter-red-cliffs">Красные скалы</label>
+                <input class="feedback__input feedback__input--checkbox" type="checkbox" name="red-cliffs" id="filter-red-cliffs">
+                <label class="feedback__label feedback__label--red-cliffs" for="filter-red-cliffs">Красные скалы</label>
               </li>
             </ul>
           </fieldset>
@@ -147,7 +139,7 @@
               Опишите подробно все свои восторги
             </textarea>
           </fieldset>
-          <button class="button button--feedback" type="submit">Отправить отзыв</button>
+          <button class="feedback__button button button--blue" type="submit">Отправить отзыв</button>
         </form>
       </section>
     </main>
@@ -159,33 +151,30 @@
           <h3 class="visually-hidden">Седона в соцсетях</h3>
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy" aria-label="Седона в Твиттере">
                 <picture>
                   <source media="(min-width: 1200px)" srcset="img/icon-twitter.svg">
                   <source media="(min-width: 768px)" srcset="img/icon-twitter.svg">
                   <img class="social__image" src="img/icon-twitter.svg" width="18" height="4" alt="Sedona в Twitter">
                 </picture>
-                <span class="visually-hidden">Мы в В Твиттере</span>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy" aria-label="Седона в Фейсбуке">
                 <picture>
                   <source media="(min-width: 1200px)" srcset="img/icon-facebook.svg">
                   <source media="(min-width: 768px)" srcset="img/icon-facebook.svg">
                   <img class="social__image" src="img/icon-facebook.svg" width="9" height="18" alt="Sedona в Facebook">
                 </picture>
-                <span class="visually-hidden">Мы в Фейсбуке</span>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru" aria-label="Седона в Ютюбе">
                 <picture>
                   <source media="(min-width: 1200px)" srcset="img/icon-youtube.svg">
                   <source media="(min-width: 768px)" srcset="img/icon-youtube.svg">
                   <img class="social__image" src="img/icon-youtube.svg" width="20" height="14" alt="Sedona в Youtube">
                 </picture>
-                <span class="visually-hidden">Мы в Youtube</span>
               </a>
             </li>
           </ul>
