--- a/source/photo.html
+++ b/source/photo.html
@@ -6,24 +6,21 @@
   <title>Фото | Седона</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <div class="container">
     <header class="page-header">
-      <div class="page-header__logo page-header__logo--wrapper">
-        <a class="page-header__logo">
+      <nav class="main-nav main-nav--opened main-nav--nojs">
+        <!--main-nav- -closed, без пробела перед -closed, для закрытого меню -->
+        <a class="page-header__logo-wrapper">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-            <img class="page-header__logo--image" src="img/logo-sedona-mobile.svg" alt="Седона">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Седона">
           </picture>
         </a>
-      </div>
-      <nav class="main-nav main-nav--opened main-nav--nojs">
-        <!--main-nav- -closed, без пробела перед -closed, для закрытого меню -->
         <button aria-label="Открыть меню" class="main-nav__toggle" type="button">
           <span class="visually-hidden">
             <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982"
@@ -55,15 +52,10 @@
 
     <main class="page-main">
       <section class="intro">
-        <div class="intro__wrapper--image">
-          <picture>
-            <source media="(min-width: 1200px)" srcset="img/bg-back-desktop@1x.jpg">
-            <source media="(min-width: 768px)" srcset="img/bg-back-tablet@1x.jpg">
-            <img class"intro__image" src="img/bg-back-mobile@1x.jpg" width="320" height="389" alt="Вид города Седона">
-          </picture>
+        <div class="intro__image-wrapper">
           <img class="intro__slogan" src="#" width="281" height="214" alt="Слоган города Седона">
         </div>
-        <div class="intro__wrapper--text">
+        <div class="intro__text-wrapper intro__text-wrapper--photo">
           <h1 class="intro__title">Фото и видео</h1>
           <p class="intro__text">
             Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
@@ -74,47 +66,47 @@
         <ul class="catalog__list">
 
           <li class="catalog__item photo">
-            <a class="photo__image">
+            <a href="#" class="photo__image">
               <picture>
                 <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg">
                 <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg">
-                <img class"photo__picture" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы">
+                <img class"photo__picture" src="img/photo-sunset-mobile@1x.jpg" alt="Неродные просторы">
               </picture>
             </a>
             <div class="photo__wrapper">
               <h3 class="photo__title">Неродные просторы</h3>
               <p class="photo__author">Автор фото: Борис</p>
               <div class="photo__likes likes">
-                <button class="photo__likes likes__button" type="button"></button>
+                <button class="photo__likes likes__button" type="button" aria-label="Поставить лайк"></button>
                 <b class="photo__likes likes__title">1350</b>
               </div>
             </div>
           </li>
 
           <li class="catalog__item photo">
-            <a class="photo__image">
+            <a href="#" class="photo__image">
               <picture>
                 <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg">
                 <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg">
-                <img class"photo__picture" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
+                <img class"photo__picture" src="img/photo-cactus-mobile@1x.jpg" alt="Местная растительность">
               </picture>
             </a>
             <div class="photo__wrapper">
               <h3 class="photo__title">Местная растительность</h3>
               <p class="photo__author">Автор фото: Сергей</p>
               <div class="photo__likes likes">
-                <button class="photo__likes likes__button" type="button"></button>
+                <button class="photo__likes likes__button" type="button" aria-label="Поставить лайк"></button>
                 <b class="photo__likes likes__title">143</b>
               </div>
             </div>
           </li>
 
           <li class="catalog__item photo">
-            <a class="photo__image">
+            <a href="#" class="photo__image">
               <picture>
                 <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg">
                 <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg">
-                <img class"photo__picture" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
+                <img class"photo__picture" src="img/photo-roads-mobile@1x.jpg" alt="Дорога на север">
               </picture>
             </a>
             <div class="photo__wrapper">
@@ -122,17 +114,17 @@
               </h3>
               <p class="photo__author">Автор фото: Петр</p>
               <div class="photo__likes likes">
-                <button class="photo__likes likes__button" type="button"></button>
+                <button class="photo__likes likes__button" type="button" aria-label="Поставить лайк"></button>
                 <b class="photo__likes likes__title">96</b>
               </div>
             </div>
           </li>
           <li class="catalog__item photo">
-            <a class="photo__image">
+            <a href="#" class="photo__image">
               <picture>
                 <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg">
                 <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg">
-                <img class"photo__picture" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост дьявола">
+                <img class"photo__picture" src="img/photo-bridge-mobile@1x.jpg" alt="Мост дьявола">
               </picture>
             </a>
             <div class="photo__wrapper">
@@ -140,7 +132,7 @@
               </h3>
               <p class="photo__author">Автор фото: Антон</p>
               <div class="photo__likes likes">
-                <button class="photo__likes likes__button" type="button"></button>
+                <button class="photo__likes likes__button" type="button" aria-label="Поставить лайк"></button>
                 <b class="photo__likes likes__title">254</b>
               </div>
             </div>
@@ -167,9 +159,9 @@
             <button aria-label="Промотать видео вперед или назад" class="video__scroller video__scroller--button" type="button"></button>
           </div>
           <div class="video__interface">
-            <button aria-label="Просмотреть снова" class="video__replay" type="submit"></button>
-            <button aria-label="Включить субтитры" class="video__subtitles" type="button"></button>
-            <button aria-label="На полный экран" class="video__fullscreen" type="button"></button>
+            <button class="video__replay" type="button" aria-label="Просмотреть снова"></button>
+            <button class="video__subtitles" type="button" aria-label="Включить субтитры"></button>
+            <button class="video__fullscreen" type="button" aria-label="На полный экран"></button>
           </div>
         </div>
       </section>
