--- a/source/index.html
+++ b/source/index.html
@@ -67,10 +67,10 @@
       <section class="advantages">
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--lightblue">
-            <section class="advantages__text-wrapper">
-              <h2 class="advantages__title advantages__title--white">Настоящий городок</h2>
-              <span class="advantages__number advantages__number--white">— №1 —</span>
-              <p class="advantages__argument advantages__argument--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <section class="advantages__text-wrapper advantages__text-wrapper--real-city">
+              <h2 class="advantages__title advantages__title--white advantages__title--real-city">Настоящий городок</h2>
+              <span class="advantages__number advantages__number--white advantages__number--real-city">— №1 —</span>
+              <p class="advantages__argument advantages__argument--white advantages__argument--real-city">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </section>
             <div class="advantages__image-wrapper">
               <picture>
@@ -84,22 +84,22 @@
             <ul class="advantages__list advantages__list--sub">
               <li class="advantages__item advantages__item--housing">
                 <section class="advantages__text-wrapper advantages__text-wrapper--housing">
-                  <h3 class="advantages__title">Жилье</h3>
-                  <p class="advantages__argument">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                  <h3 class="advantages__title advantages__title--housing">Жилье</h3>
+                  <p class="advantages__argument advantages__argument--housing">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </section>
               </li>
 
               <li class="advantages__item advantages__item--souvenirs">
                 <section class="advantages__text-wrapper advantages__text-wrapper--souvenirs">
-                  <h3 class="advantages__title">Сувениры</h3>
-                  <p class="advantages__argument"> Не только китайского, но и местного производства!</p>
+                  <h3 class="advantages__title advantages__title--souvenirs">Сувениры</h3>
+                  <p class="advantages__argument advantages__argument--souvenirs"> Не только китайского, но и местного производства!</p>
                 </section>
               </li>
 
               <li class="advantages__item advantages__item--food">
                 <section class="advantages__text-wrapper advantages__text-wrapper--food">
-                  <h3 class="advantages__title">Еда</h3>
-                  <p class="advantages__argument">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
+                  <h3 class="advantages__title advantages__title--food">Еда</h3>
+                  <p class="advantages__argument advantages__argument--food">Всегда заказывайте Фирменный бургер, Вы не разочаруетесь!</p>
                 </section>
               </li>
             </ul>
