--- a/source/form.html
+++ b/source/form.html
@@ -192,6 +192,25 @@
         </div>
       </div>
     </footer>
+    <section class="modal__window modal__window--not-sent">
+      <div class="modal__wrapper modal__wrapper--not-sent">
+        <h3 class="modal__title modal__title--not-sent">Что-то пошло не так!</h3>
+        <p class="modal__text modal__text--not-sent">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить!</p>
+        <div class="modal__button-wrapper modal__button-wrapper--not-sent">
+          <button class="modal__button modal__button--not-sent button button--blue" type="button">ОК</button>
+        </div>
+      </div>
+    </section>
+    <section class="modal__window modal__window--sent">
+      <div class="modal__wrapper modal__wrapper--sent">
+        <h3 class="modal__title modal__title--sent">Ваш отзыв отправлен!</h3>
+        <p class="modal__text modal__text--sent">Спасибо за ваше участие, ваш отзыв уже поступил к нам.
+          В ближайшее время мы опубликуем его на сайте.</p>
+        <div class="modal__button-wrapper modal__button-wrapper--sent">
+          <button class="modal__button modal__button--sent button button--blue" type="button">Закрыть окно</button>
+        </div>
+      </div>
+    </section>
   </div>
 
   <script>
