--- a/source/form.html
+++ b/source/form.html
@@ -83,7 +83,10 @@
       <section class="intro">
         <div class="intro__image-wrapper">
           <picture>
-            <img class="intro__slogan" src="text-sedona.svg" width="281" height="214" alt="Слоган города Седона">
+            <picture>
+
+              <img class="promo__slogan" src="img/text-sedona-index.svg" alt="Слоган города Седона">
+            </picture>
           </picture>
         </div>
         <div class="intro__text-wrapper intro__text-wrapper--form">
