--- a/source/index.html
+++ b/source/index.html
@@ -123,7 +123,7 @@
         <div class="promo__wrapper">
           <picture>
 
-            <img class="promo__slogan" src="img/text-sedona-index.svg" width="281" height="214" alt="Слоган города Седона">
+            <img class="promo__slogan" src="img/text-sedona-index.svg" alt="Слоган города Седона">
           </picture>
         </div>
         <h1 class="visually-hidden">Седона — городок в Аризоне</h1>
